personalDev/happy-soup/unpackaged/unpackaged/objects/Rental__c.object
<CustomObject>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Rentals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReturnDateTime__c</fullName>
        <label>Return Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stock__c</fullName>
        <label>Stock</label>
        <referenceTo>Stock__c</referenceTo>
        <relationshipLabel>Rentals</relationshipLabel>
        <relationshipName>Rentals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Rental</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Rental Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rentals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>